fixed up coloring scheme and spacing

--- a/src/Stylesheets/App.scss
+++ b/src/Stylesheets/App.scss
@@ -38,13 +38,14 @@ html, body {
 // Header component
 
 #header{
-  position: relative;
+  position: fixed;
   @include flex(column, flex-start, center);
   width: 100%;
   height: 75px;
   color: white;
   transition: background-color 1s;
   background-color: #f1ece4;
+  z-index: 12;
 
   #header-link-collect {
     @include flex(row, center, center);
@@ -112,6 +113,7 @@ html, body {
   color: white;
   z-index: 12;
   position: relative;
+  top: 75px;
 
   #intro-desc {
     @include flex(column, flex-start, flex-start);
@@ -124,7 +126,7 @@ html, body {
       font-size: 40px;
       margin: 0 0 10px 0;
       opacity: 0;
-      @include animate(fadein, 1s, 0s, forwards);
+      @include animate(fadein, 1.5s, 0.5s, forwards);
 
       span {
         color: #d8a347;
@@ -137,10 +139,10 @@ html, body {
     }
 
     #name {
-      font-size: 30px;
+      font-size: 50px;
       margin: 0;
       opacity: 0;
-      @include animate(fadein, 1s, 0.5s, forwards);
+      @include animate(fadein, 1s, 0s, forwards);
     }
   }
 }
@@ -163,22 +165,6 @@ html, body {
   100% { color: #d8a347; }
 }
 
-// Wrapper Component
-
-#wrapper {
-  @include flex(column, flex-start, center);
-  background-color: #262627;
-  width: 100%;
-  padding: 30px;
-  box-sizing: border-box;
-  margin-top: 75px;
-  height: 700px;
-  position: absolute;
-  z-index: 5;
-  color: white;
-  top: 0;
-}
-
 // Me component
 
 #me-cont {
@@ -187,6 +173,9 @@ html, body {
   width: 100%;
   padding: 40px;
   min-height: calc(100vh - 75px);
+  top: 75px;
+  position: relative;
+  box-sizing: border-box;
 
   #me {
     @include flex(column, flex-start, center);
